--- a/src/styles/components/navigation.scss
+++ b/src/styles/components/navigation.scss
@@ -1,3 +1,11 @@
+/**
+ * Navigation
+ * 
+ * Project: Bayesian Packer
+ * File: /src/scss/components/navigation.scss
+ * Initial author: Damien Bayes <damien.bayes.db@gmail.com>
+ */
+
 .navigation {
   display: flex;
   color: $gray-800;
