--- a/src/404.njk
+++ b/src/404.njk
@@ -6,7 +6,16 @@
 ---
 
 <section class="section page-not-found">
-
-  <h1>Page Not Found</h1>
+  
+  <div class="row">
+    <div class="column-6">
+      <h1>Page Not Found</h1>
+    </div>
+    <div class="column-6">
+      <div class="page-not-found__image">
+        <img src="{{ '/' | url }}{{ app.pageNotFoundUrl }}" alt="{{ app.name }}"/>
+      </div>
+    </div>
+  </div>
 
 </section>
