--- a/src/contribution.njk
+++ b/src/contribution.njk
@@ -7,7 +7,7 @@
 
 <section class="section contribution">
 
-  <div class="headline">
+  <div class="headline headline--extra-large">
     <h1 class="headline__title">{{ title }}</h1>
     <p class="headline__description"></p>
   </div>
