--- a/src/faq.njk
+++ b/src/faq.njk
@@ -7,7 +7,7 @@
 
 <section class="section faq">
 
-  <div class="headline">
+  <div class="headline headline--extra-large">
     <h1 class="headline__title">{{ title }}</h1>
     <p class="headline__description">Find answers to frequently asked questions. See the most common topics and more.</p>
   </div>
