--- a/src/index.njk
+++ b/src/index.njk
@@ -10,16 +10,16 @@
   <div class="card">
     <div class="card__body">
       <div>
-        <div class="headline headline--large">
-          <h1 class="headline__title">{{ app.name }} <span class="badge badge--alternative">{{ app.version }}</span></h1>
+        <div class="headline headline--extra-large">
+          <h1 class="headline__title">{{ app.name }} <span class="badge badge--alternative badge--rounded">{{ app.version }}</span></h1>
           <p class="headline__description">{{ app.description }}</p>
         </div>
 
         <!-- <h6>Built for developers in order to make technology open to the world</h6> -->
 
         <div class="button-collection button-collection--left-aligned">
-          <a class="button button--outlined-primary mr-2">Get Started</a>
-          <a href="https://github.com/damien-bayes/bayesian-packer_client" target="_blank" class="button button--primary">Github</a>
+          <a class="button button--outlined-primary button--rounded mr-2">Get Started</a>
+          <a href="https://github.com/damien-bayes/bayesian-packer_client" target="_blank" class="button button--primary button--rounded">Github</a>
         </div>
       </div>
       <div>
