--- a/src/patch-notes/index.njk
+++ b/src/patch-notes/index.njk
@@ -13,7 +13,7 @@
 
 <section class="section patch-notes">
 
-  <div class="headline">
+  <div class="headline headline--extra-large">
     <h1 class="headline__title">{{ title }}</h1>
     <p class="headline__description">Read the latest {{ app.name }} patch notes or research historical changes</p>
   </div>
@@ -33,7 +33,7 @@
   {% endfor %}
 
   <nav class="pagination" aria-labelledby="pagination1">
-    <h2 id="pagination1">This is the pagination</h2>
+    <h6 id="pagination1">This is the pagination</h6>
 
     <ul class="pagination__list">
       {%- for pageEntry in pagination.pages %}
