--- a/src/styles/components/faq.scss
+++ b/src/styles/components/faq.scss
@@ -34,7 +34,7 @@
   }
 
   &__title {
-    font-size: 1rem;
+    font-size: $base-font-size;
     cursor: pointer;
     -ms-user-select: none;
     user-select: none;
@@ -42,12 +42,14 @@
     -moz-user-select: none;
     -o-user-select: none;
     margin: 0;
+    font-weight: $font-weight-bold;
+    line-height: $base-line-height;
   }
 
   &__square {
     position: absolute;
-    top: .25em;
-    left: .5em;
+    top: 9.6px;
+    left: 9.6px;
     width: 6px;
     height: 6px;
     background-color: $gray-600;
@@ -66,7 +68,7 @@
   &__answer {
     opacity: 0;
     height: 0;
-    color: $gray-600;
+    color: $gray-800;
     padding: $sm-indent 0;
   }
 }
