--- a/src/styles/variables/layer.scss
+++ b/src/styles/variables/layer.scss
@@ -6,6 +6,7 @@
  * Initial author: Damien Bayes <damien.bayes.db@gmail.com>
  */
 
+/* Variant 1 (Default layers) */
 $layer-100: 100;
 $layer-200: 200;
 $layer-300: 300;
@@ -15,3 +16,16 @@ $layer-600: 600;
 $layer-700: 700;
 $layer-800: 800;
 $layer-900: 900;
+
+/* Variant 2 (Binary layers) */
+$layer-0: 0px !default;
+$layer-1: 1px !default;
+$layer-2: 2px !default;
+$layer-4: 4px !default;
+$layer-8: 8px !default;
+$layer-16: 16px !default;
+$layer-32: 32px !default;
+$layer-64: 64px !default;
+$layer-128: 128px !default;
+$layer-256: 256px !default;
+$layer-512: 512px !default;
