--- a/src/styles/variables/shadow.scss
+++ b/src/styles/variables/shadow.scss
@@ -4,6 +4,25 @@
  * Project: Bayesian Aspectus
  * File: /src/styles/variables/shadow.scss
  * Initial author: Damien Bayes <damien.bayes.db@gmail.com>
+ *
+ * References
+ * 1. https://codepen.io/sdthornton/pen/wBZdXq
  */
 
-$shadow-1: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.02) !default;
+ $shadow-1: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.02) !default;
+ $shadow-2: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24) !default;
+ $shadow-3: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23) !default;
+ $shadow-4: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23) !default;
+ $shadow-5: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22) !default;
+ $shadow-6: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22) !default;
+ /*
+  * box-shadow: h-offset v-offset blur-radius spread-radius color;
+  *
+  * h-offset: The horizontal offset of the shadow. Negative values put the shadow to the left of the element.
+  * v-offset: The vertical offset of the shadow. Negative values put the shadow above the element.
+  * blur-radius: Determines the blur amount; the higher the number, the more blur (optional).
+  * spread-radius: The size of the shadow. If zero, it's the same size as the blur (optional).
+  * color: The color of the shadow (optional).
+  * inset: Add inset to change shadow from outer to inner (optional).
+  */
+ 
