--- a/src/documentation.njk
+++ b/src/documentation.njk
@@ -5,11 +5,19 @@
 }
 ---
 
+<!-- Documentation Page -->
 <section class="section documentation">
 
-  <div class="headline headline--extra-large">
-    <h1 class="headline__title">{{ title }}</h1>
-    <p class="headline__description"></p>
+  <div class="card">
+    <div class="card__body">
+
+      <!-- Headline -->
+      <div class="headline headline--extra-large">
+        <h1 class="headline__title">{{ title }}</h1>
+        <p class="headline__description"></p>
+      </div>
+
+    </div>
   </div>
 
 </section>
