--- a/src/_includes/_layouts/base.njk
+++ b/src/_includes/_layouts/base.njk
@@ -1,5 +1,5 @@
 ---
-keywords: "bash, shell, unix, automation, bayesian-automation, bayesian-ecosystem, archiver, cli, powershell, windows, bayesian-family"
+keywords: "bash, shell, unix, automation, baythium-automation, baythium-ecosystem, archiver, cli, powershell, windows, baythium-family, baythium"
 description: "Large-scale and secure folder and file archiver for automating your infrastructure"
 ---
 
@@ -82,5 +82,15 @@ description: "Large-scale and secure folder and file archiver for automating you
     <script>
       {{ js | minifyJs | safe }}
     </script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163071822-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){ dataLayer.push(arguments); }
+      gtag("js", new Date());
+      gtag("config", "UA-163071822-1");
+</script>
+
   </body>
 </html>
