--- a/src/_includes/_layouts/base.njk
+++ b/src/_includes/_layouts/base.njk
@@ -58,8 +58,8 @@ description: "Large-scale and secure folder and file archiver for automating you
 
     <link rel="icon" href="/favicon.ico"/>
 
-    <link href="/styles/bayesian-aspectus.min.css" rel="stylesheet" media="all"/>
-    <link href="/styles/custom-bayesian-aspectus.css" rel="stylesheet" media="all"/>
+    <link href="/styles/baythium-aspectus.min.css" rel="stylesheet" media="all"/>
+    <link href="/styles/custom-baythium-aspectus.css" rel="stylesheet" media="all"/>
   </head>
 
   <body id="app">
@@ -71,7 +71,7 @@ description: "Large-scale and secure folder and file archiver for automating you
     {% include "_partials/app-footer.njk" %}
 
     <noscript>
-      <strong>We're sorry but this web application doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but this website doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <script src="/js/bayesian-aspectus.min.js"></script>
     <!-- 1. Capture the javascript content as a nunjucks variable -->
