--- a/src/index.njk
+++ b/src/index.njk
@@ -34,8 +34,8 @@
           <!-- Button collection -->
           <div class="button-collection button-collection--left-aligned">
             <a class="button button--outlined-primary button--rounded mr-2 button--small"><span class="icon icon--get-started"></span>Documentation</a>
-            <a href="https://github.com/damien-bayes/bayesian-packer_client" target="_blank" class="button button--outlined-primary button--rounded button--small mr-2"><span class="icon icon--github"></span>Github</a>
-            <a href="https://github.com/damien-bayes/bayesian-packer_client" target="_blank" class="button button--primary button--rounded button--small"><span class="icon icon--download"></span>Download</a>
+            <a href="https://github.com/damien-bayes/baythium-packer_client" target="_blank" class="button button--outlined-primary button--rounded button--small mr-2"><span class="icon icon--github"></span>Github</a>
+            <a href="javascript:" target="_blank" class="button button--primary button--rounded button--small"><span class="icon icon--download"></span>Download</a>
           </div>
 
         </div>
