--- a/src/contact.njk
+++ b/src/contact.njk
@@ -1,7 +1,9 @@
 ---js
 {
   layout: "_layouts/base.njk",
-  title: "Contact"
+  title: "Contact",
+  changefreq: "monthly",
+  priority: 0.5
 }
 ---
 
