--- a/src/patch-notes/2020-03-22/index.njk
+++ b/src/patch-notes/2020-03-22/index.njk
@@ -4,6 +4,8 @@ author: "Damien Bayes"
 title: Patch Note 1.4
 date: 2020-03-22
 tags: "patch_notes"
+changefreq: "daily"
+priority: 1
 ---
 
 <section class="section">
